# ground-station

./: .drone.yml  .pre-commit-config.yaml  Dockerfile  README.md
.github/workflows/: tests.yml
backend/: logconfigtemplate.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/versions/: 9d8f3d9aa2b7_migrate_legacy_tracking_state_to_.py  a2b4c6d8e0f1_backfill_tracker_id_in_scheduler_rotator_config.py  f2a6c9d1e4b7_add_source_to_satellites.py  f9a1c2d3e4b5_auth.py
backend/audio/: deepgramtranscriptionworker.py  geminitranscriptionworker.py  transcriptionworker.py
backend/celestial/: horizons.py  scene.py
backend/common/: audio_queue_config.py  auth.py
backend/crud/: locations.py  monitoredsatellites.py  preferences.py  satellites.py  scheduledobservations.py  trackingstate.py  transmitters.py
backend/db/: models.py
backend/demodulators/: gnsssdrdecoder.py
backend/handlers/: __init__.py  socket.py
backend/handlers/entities/: __init__.py  appsettings.py  celestial.py  control.py  decoderconfig.py  filebrowser.py  groups.py  hardware.py  locations.py  orbitalsources.py  preferences.py  satellites.py  scheduler.py  sdr.py  sessions.py  setup.py  systeminfo.py  tracking.py  transmitters.py  vfo.py
backend/handlers/routing/: __init__.py  dispatcher.py  registry.py
backend/images/satellites/: ATTRIBUTION.md  ICON_WORKFLOW.md
backend/monitoring/: performancemonitor.py
backend/observations/: executor.py
backend/observations/tasks/: trackerhandler.py  transcriptionhandler.py
backend/pipeline/config/: decoderconfig.py  decoderconfigservice.py
backend/pipeline/orchestration/: processlifecycle.py
backend/pipeline/registries/: decoderregistry.py
backend/scripts/: process_satellite_icons.py
backend/server/: firsttime.py  scheduler.py  schedulerstate.py  startup.py  version.json
backend/tasks/: manager.py
backend/tests/: test_auth.py  test_celestial_scene_cache_policy.py  test_crud_locations.py  test_crud_satellites.py  test_dispatcher.py  test_gnss_decoder_log_events.py  test_observation_trackerhandler.py  test_preferences.py  test_tlesync_utils.py  test_tracking_doppler.py  testorbitalsources.py  testsetup.py  testtlesyncpersist.py  testtrackinghandler.py
backend/tlesync/: logic.py  persist.py  state.py  utils.py
backend/tracker/: data.py  logic.py  manager.py  messages.py  righandler.py  runner.py
backend/tracking/: doppler.py
backend/vfos/: state.py
backend/workers/: sigmfplaybackworker.py  uhdworker.py
frontend/: package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: auth-constants.js  auth.spec.js  satellite-tracking.spec.js  settings.spec.js  setup-wizard.spec.js
frontend/public/assets/astronomy/: stars-bright-v1.json  stars-bright-v1.provenance.md
frontend/src/: App.jsx  main.jsx
frontend/src/components/auth/: auth-slice.jsx  screens.jsx
frontend/src/components/celestial/: celestial-display-slice.jsx  celestial-info-island.jsx  celestial-slice.jsx  celestial-toolbar.jsx  celestial-topbar.jsx  icon-catalog.js  main-layout.jsx  monitored-grid-island.jsx  monitored-slice.jsx  satellite-icon.jsx  solar-system-layout-options-dialog.jsx  solarsystem-canvas.jsx
frontend/src/components/common/: common.jsx  error-page.jsx  socket.jsx  store.jsx
frontend/src/components/dashboard/: audio-buffer-config.js  dashboard-layout.jsx  dashboard-slice.jsx  hardware-popover.jsx  rig-control.jsx  rotator-control.jsx  target-popover.jsx
frontend/src/components/decoders/: decoders-slice.jsx
frontend/src/components/earthview/: earthview-slice.jsx
frontend/src/components/filebrowser/: filebrowser-slice.jsx
frontend/src/components/hardware/: camera-slice.jsx  camera-table.jsx  rig-slice.jsx  rig-table.jsx  rotaror-slice.jsx  rotator-table.jsx  sdr-slice.jsx  sdr-table.jsx
frontend/src/components/overview/: main-layout.jsx  map-tooltip.jsx  overview-map-container.jsx  overview-map-leaflet.jsx  overview-map.jsx  overview-slice.jsx  satellite-info.jsx  satellite-passes.jsx
frontend/src/components/passes/timeline/: pass-timeline.jsx
frontend/src/components/performance/: performance-metrics-dialog.jsx
frontend/src/components/satellites/: groups-dialog.jsx  groups-slice.jsx  groups-table.jsx  satellite-info-page.jsx  satellite-slice.jsx  satellite-table.jsx  sources-slice.jsx  sources-table.jsx  synchronize-header.jsx  synchronize-slice.jsx  transmitter-modal.jsx  transmitters-dialog.jsx  transmitters-table.jsx
frontend/src/components/scheduler/: decoder-config-suggestion.jsx  main-layout.jsx  monitored-satellites-table.jsx  observation-data-dialog.jsx  observation-status-banner.jsx  observations-table.jsx  satellite-selector.jsx  scheduler-slice.jsx
frontend/src/components/settings/: app-settings-form.jsx  library-versions-slice.jsx  location-form.jsx  location-slice.jsx  preferences-form.jsx  preferences-slice.jsx  sessions-slice.jsx  settings.jsx  users-form.jsx
frontend/src/components/settings/maintenance/: database-backup-card.jsx  service-control-card.jsx  transmitter-import-card.jsx
frontend/src/components/setup/: setup.jsx
frontend/src/components/tasks/: tasks-slice.jsx
frontend/src/components/waterfall/: bookmarks-overlay.jsx  decoded-insights-island.jsx  decoded-packets-drawer.jsx  decoder-parameters.js  dom-tile-waterfall-renderer.js  main-layout.jsx  settings-column.jsx  settings-fft.jsx  settings-sdr.jsx  waterfall-bandscope.jsx  waterfall-engine-provider.jsx  waterfall-island.jsx  waterfall-right-sidebar.jsx  waterfall-slice.jsx  waterfall-stream.jsx  waterfall-worker.js
frontend/src/components/waterfall/vfo-marker/: vfo-config.js  vfo-container.jsx  vfo-middleware.jsx  vfo-slice.jsx  vfo-utils.js
frontend/src/components/waterfall/vfo-settings/: vfo-constants.js  vfo-formatters.js  vfo-mode-selectors.jsx
frontend/src/config/: navigation.jsx
frontend/src/hooks/: usePassFetching.jsx  useSocketEventHandlers.jsx
frontend/src/services/: data-sync.js
frontend/src/utils/: datagrid-selection.js
tools/astronomy/: stars.py
(+1 files in other folders)
